# cue-shell

./: .gitignore  Cargo.toml  README.md  SPARK.md  cue_shell_tools.py  justfile  pyproject.toml
.cargo/: mutants.toml
.github/workflows/: ci-build-test.yml
crates/cue-cli/: Cargo.toml
crates/cue-cli/src/: main.rs  script_runner.rs
crates/cue-cli/tests/: daemon_integration.rs
crates/cue-client/: Cargo.toml
crates/cue-client/src/: cli.rs  client.rs  daemon_lifecycle.rs  lib.rs  main.rs  reconnect.rs  script_runner.rs  ssh_transport.rs  transport_settings.rs
crates/cue-core/src/: command.rs  command_spec.rs  cron.rs  id.rs  ipc.rs  job.rs  lib.rs  scope.rs
crates/cue-daemon/: Cargo.toml
crates/cue-daemon/src/: cli.rs  config.rs  dirs.rs  gateway_stdio.rs  lib.rs  lifecycle.rs  ring_buffer.rs  runtime_env.rs  sandbox.rs  service.rs  storage.rs
crates/cue-daemon/src/actor/: event_bus.rs  gateway.rs  mod.rs  operation_ledger.rs  process_mgr.rs  scheduler.rs  scope_store.rs
crates/cue-daemon/src/parser/: ast.rs  duration.rs  parse.rs  resolver.rs  tokenizer.rs
crates/cue-daemon/tests/: daemon_integration.rs
crates/cue-tui/: Cargo.toml
crates/cue-tui/src/: app.rs  cli.rs  client.rs  companion_binary.rs  completion.rs  daemon_lifecycle.rs  event.rs  frontend_connection.rs  history.rs  lib.rs  main.rs  path_lookup.rs  record_format.rs  script_summary.rs  session_binding.rs  target_config.rs  target_settings.rs  tracing_config.rs  ui.rs  version_check.rs
crates/cue-tui/src/component/: main_view.rs  status_bar.rs
crates/cued/: Cargo.toml
crates/cued/src/: config.rs  lib.rs  main.rs  storage.rs
crates/cued/src/actor/: mod.rs  process_mgr.rs  scheduler.rs  scope_store.rs
crates/cued/src/parser/: ast.rs  parse.rs  resolver.rs  token.rs  tokenizer.rs
crates/cued/tests/: integration.rs
docs/design/: README.md  commands-and-modes.md  conceptual-model.md  core-types.md  cue-script.md  daemon-architecture.md  ipc-protocol.md  parser.md  transport-modes.md  tui.md
examples/: chain.cue  fail.cue  hello.cue
