[package]
name = "cue-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI entry point for cue-shell: command parsing, mode dispatch"
repository.workspace = true
license.workspace = true

[[bin]]
name = "cue"
path = "src/main.rs"

# Companion command names must live inside this package. Maturin rewrites the
# sdist Cargo.toml and drops [[bin]] targets whose paths leave the crate root,
# which previously left only `cue` installable from source distributions.
# Owning crates still keep their own bins for direct cargo run / workspace use.
[[bin]]
name = "cue-client"
path = "src/bin/cue-client.rs"
required-features = ["cue-client"]

[[bin]]
name = "cue-tui"
path = "src/bin/cue-tui.rs"
required-features = ["cue-tui"]

[[bin]]
name = "cue-daemon"
path = "src/bin/cue-daemon.rs"
required-features = ["cue-daemon"]

[[bin]]
name = "cued"
path = "src/bin/cued.rs"
required-features = ["cue-daemon"]

[dependencies]
anyhow.workspace = true
cue-client = { path = "../cue-client" }
cue-core = { path = "../cue-core" }
cue-daemon = { path = "../cue-daemon", optional = true }
cue-tui = { path = "../cue-tui", optional = true }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
libc.workspace = true

[features]
default = ["cue-client", "cue-daemon", "cue-tui"]
cue-client = []
cue-daemon = ["dep:cue-daemon"]
cue-tui = ["dep:cue-tui"]
